--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,29 @@
-# CONFIG
+### Please do not write any sensetive data to .env.example because it gets uploaded to GitHub ###
+
+# CONFIG #
+
 DATA_PATH=./data/
 
 # 15 min
 QUEUE_TIMER=900000
 
-# END CONFIG
-
-HTTPS_SSL_CERT=
-HTTPS_SSL_KEY=
+# END CONFIG #
 
 # NOTE DO NOT USE "USERNAME" IT WILL TAKE THE USERNAME BASED ON THE USER LOGGED IN ON THE COMPUTER
-# DEV
+# DEV - "yarn dev"
 DEV_TELLUS_ENDPOINT=
 DEV_TELLUS_USERNAME=
 DEV_TELLUS_PASSWORD=
 
-# ACC
-TELLUS_ENDPOINT=
-TELLUS_USERNAME=
-TELLUS_PASSWORD=
+### CONFIGURATION WHEN WE ARE RUNNING IN PRODUCTION MODE "yarn start" ###
 
-# PROD
+# ENDPOINT CONFIGURATION + CREDENTIALS #
+
 # TELLUS_ENDPOINT=
 # TELLUS_USERNAME=
 # TELLUS_PASSWORD=
+
+# HTTPS CERTS #
+
+# HTTPS_SSL_CERT=
+# HTTPS_SSL_KEY=
