--- a/package.json
+++ b/package.json
@@ -14,30 +14,26 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "2.8.2",
-    "@chakra-ui/theme-tools": "^2.1.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "axios": "^1.6.5",
     "cross-env": "^7.0.3",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
     "formik": "^2.4.5",
-    "framer-motion": "^10.18.0",
+    "framer-motion": "^11.3.21",
     "fs-extra": "^11.2.0",
-    "next": "14.1.0",
+    "next": "14.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "winston": "^3.11.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^20.11.5",
+    "@types/node": "^22.1.0",
     "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
-  }
+  },
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
